# GNX

./: .gitignore  INSTALL_WINDOWS_PIP.md  PPPSession.py  README.md  SISSession.py  SPPSession.py  STECSession.py  constraints-macos.txt  constraints-win.txt  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements-tutorial.txt  requirements.txt  setup.py
examples/: README.md  run_ppp_example.py  run_sise_example.py  run_spp_example.py  run_stec_example.py
gnx_py/: __init__.py  biases.py  configuration.py  conversion.py  coordinates.py  corrections.py  gnss.py  io.py  rinex2_adapter.py  session_errors.py  spp.py  tides.py  time.py  tools.py  troposphere.py  utils.py
gnx_py/ionosphere/: README.md  STEC_BIAS_USAGE.md  __init__.py  bias_policy.py  config.py  ionex.py  kriging.py  modelling.py  models.py  monitoring.py  smg.py  smg_convert.py  utils.py
gnx_py/orbits/: README.md  __init__.py  config.py
gnx_py/ppp/: README.md  __init__.py  config.py  ppp_gnss.py  ppp_helpers.py  ppp_single.py  ppp_uduc.py  pppar.py  preprocessing.py
sample_data/: BRDC00CNE_R_20240350000_01D_GN.rnx  CAS0MGXRAP_20240350000_01D_01D_DCB.BSX  CAS1OPSRAP_20240350000_01D_01D_DCB.BIA  COD0OPSFIN_20240340000_01D_05M_ORB.SP3  COD0OPSFIN_20240350000_01D_01D_OSB.BIA  COD0OPSFIN_20240350000_01D_01H_GIM.INX  COD0OPSFIN_20240350000_01D_05M_ORB.SP3  COD0OPSFIN_20240360000_01D_05M_ORB.SP3  GFZ0MGXRAP_20240350000_01D_01D_OSB.BIA  GRG0MGXFIN_20240350000_01D_01D_OSB.BIA  GRG0MGXFIN_20240350000_01D_05M_ORB.SP3  IGS0OPSFIN_20240350000_01D_02H_GIM.INX  IGS0OPSSNX_20240350000_01D_01D_CRD.SNX  dcb_table.csv
sample_data/output/: BOR1_E_STEC.parquet.gzip  (+3 more)
tutorial/: README.md  bibliography.bib  build_manual.py  introduction.ipynb  ionosphere_introduction.ipynb  kriging.ipynb  manual_config.yaml  orbit_analysis.ipynb  preamble.tex  titlepage.tex
(+15 files in other folders)
