[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnx_py"
version = "0.1.0"
description = "GNSS processing library for PPP, SISRE/URE evaluation, and ionospheric modelling."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Hubert Pierzchała" }
]
keywords = ["GNSS", "PPP", "SISRE", "ionosphere", "STEC", "RINEX"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=2.2,<2.4",
  "numba==0.63.1",
  "astropy==7.0.0",
  "Cartopy==0.24.1",
  "matplotlib>=3.10,<3.11",
  "pandas>=2.3,<2.4",
  "scipy>=1.12,<2.0",
  "xarray>=2025.1,<2026.0",
  "pyarrow>=14",
  "filterpy==1.4.5",
  "georinex==1.16.2",
  "tabulate==0.9.0",
]

[project.optional-dependencies]
tutorial = [
  "seaborn>=0.13,<0.14",
  "nbformat>=5,<6",
  "nbconvert>=7,<8",
  "ipykernel>=6,<7",
  "jupyterlab>=4,<5",
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "black>=24.0,<26",
  "mypy>=1.10,<2",
  "seaborn>=0.13,<0.14",
  "nbformat>=5,<6",
  "nbconvert>=7,<8",
  "ipykernel>=6,<7",
  "jupyterlab>=4,<5",
]

[project.urls]
Homepage = "https://github.com/HJpierzchala/GNX"
Repository = "https://github.com/HJpierzchala/GNX"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["gnx_py", "gnx_py.*"]
exclude = [
  "docs*",
  "examples*",
  "sample_data*",
  "scripts*",
  "tests*",
  "tutorial*",
]
